--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,14 +31,15 @@ endorsed.classpath=
 excludes=
 file.reference.postgresql-9.2-1002.jdbc4.jar=lib/postgresql-9.2-1002.jdbc4.jar
 file.reference.postgresql-9.3-1103.jdbc4.jar=lib/postgresql-9.3-1103.jdbc4.jar
+file.reference.sitm-ws-duckling-client-0.0.1-SNAPSHOT.jar=sitm-ws-duckling-client-0.0.1-SNAPSHOT.jar
 includes=**
 jar.compress=true
 javac.classpath=\
+    ${file.reference.postgresql-9.3-1103.jdbc4.jar}:\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.postgresql-9.2-1002.jdbc4.jar}:\
-    ${libs.Log4j  1.2.17.classpath}:\
-    ${file.reference.postgresql-9.3-1103.jdbc4.jar}
+    ${file.reference.sitm-ws-duckling-client-0.0.1-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
